[tool.poetry]
name = "shn-pygame"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "shn_pygame"}]

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
